--- a/config.env
+++ b/config.env
@@ -44,13 +44,13 @@ BOT_PM = "True"
 FORCE_BOT_PM = "True"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = -1001671878853
+LEECH_LOG = -1001696495854
 LEECH_LOG_URL = ""
 LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001671878853
+MIRROR_LOGS = -1001696495854
 MIRROR_LOG_URL = ""
 LINK_LOGS = 
 
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = 
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://mtlab.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
