--- a/config.env
+++ b/config.env
@@ -45,6 +45,7 @@ FORCE_BOT_PM = "True"   #For this the BOT_PM must be True
 
 # Leech
 LEECH_LOG = -1001696495854
+SERVICE_ACCOUNTS_NUMBER = 9d4992cafc4497d4f659695dffef00244ec07ce9
 LEECH_LOG_URL = ""
 LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
