--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ TELEGRAM_API = 1923471
 TELEGRAM_HASH = "fcdc178451cd234e63faefd38895c991"
 
 # OPTIONAL CONFIG
-DATABASE_URL = "mongodb+srv://Erichdaniken:Erichdaniken@cluster0.vhu3d.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://video:video@cluster0.gp0rn.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001537168432 -1001775437494 -1001788120367"  # Split by space
 SUDO_USERS = "928866253 880087645 1540312271 1441767180 1311694064"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = 
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://mtlab.onrender.com"
+BASE_URL_OF_BOT = ""
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
