--- a/config.env
+++ b/config.env
@@ -37,7 +37,7 @@ SET_BOT_COMMANDS = "true"
 
 # Update
 UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb"
-UPSTREAM_BRANCH = "update"
+UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
 BOT_PM = "True"
