--- a/config.env
+++ b/config.env
@@ -36,7 +36,7 @@ MEDIAINFO_ENABLED = "true"          #Default is False (only use by owner/sudo) M
 SET_BOT_COMMANDS = "true" 
 
 # Update
-UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb"
+UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
