--- a/config.env
+++ b/config.env
@@ -36,8 +36,8 @@ MEDIAINFO_ENABLED = "true"          #Default is False (only use by owner/sudo) M
 SET_BOT_COMMANDS = "true" 
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb"
+UPSTREAM_BRANCH = "beta"
 
 #PM SUPPORT
 BOT_PM = "True"
