--- a/config.env
+++ b/config.env
@@ -15,7 +15,7 @@ DATABASE_URL = "mongodb+srv://video:video@cluster0.gp0rn.mongodb.net/?retryWrite
 AUTHORIZED_CHATS = "-1001537168432 -1001775437494 -1001788120367"  # Split by space
 SUDO_USERS = "928866253 880087645 1540312271 1441767180 1311694064"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
+USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://gindex.jasurun.workers.dev/0:"
 STATUS_LIMIT = "5" #recommended value 2
 STOP_DUPLICATE = "False"
@@ -37,7 +37,7 @@ SET_BOT_COMMANDS = "true"
 
 # Update
 UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb"
-UPSTREAM_BRANCH = "master"
+UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
 BOT_PM = "True"
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = 
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://applicable-barbi-newjegatheesh.koyeb.app/"
+BASE_URL_OF_BOT = "https://mirrorjai.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
