--- a/config.env
+++ b/config.env
@@ -67,13 +67,13 @@ AUTHOR_URL = "https://t.me/JAsuranbots"
 GD_INFO = ""
 
 # Force Sub Channel
-FSUB = "False"
-CHANNEL_USERNAME = ""
-FSUB_CHANNEL_ID = 
+FSUB = "True"
+CHANNEL_USERNAME = "JAsuranserials"
+FSUB_CHANNEL_ID = -1001695270196
 
 # qBittorrent
 BASE_URL_OF_BOT = "https://mirrorjai.onrender.com"
-SERVER_PORT = "81"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
 
