--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "1974637424:AAGjdLOhjyxHU6l7UTbVn3qtpDcWmjlENrU"
+BOT_TOKEN = "5843541225:AAEZl7dBVy-LdN2j9Kk6ysmWTqh7fqyXrco"
 GDRIVE_FOLDER_ID = "0AGy-a2Owc4PAUk9PVA"
 OWNER_ID = 880087645
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -36,7 +36,7 @@ MEDIAINFO_ENABLED = "true"          #Default is False (only use by owner/sudo) M
 SET_BOT_COMMANDS = "true" 
 
 # Update
-UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb"
+UPSTREAM_REPO = "https://github.com/Jegaa1/rmltb1"
 UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = "JAsuranserials"
 FSUB_CHANNEL_ID = -1001695270196
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://mirrorjais.onrender.com"
+BASE_URL_OF_BOT = "https://mirrorjais2.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
