--- a/config.env
+++ b/config.env
@@ -131,60 +131,60 @@ BUTTON_SIX_URL = ""
 
 
 #Mirror Related Commands
-START_COMMAND = ""      #Default is "start"
-MIRROR_COMMAND = ""     #Default is "mirror"
-ZIP_COMMAND = ""        #Default is "zipmirror"
-UNZIP_COMMAND = ""      #Default is "unzipmirror"
-CANCEL_COMMAND = ""     #Default is "cancel"
-LIST_COMMAND = ""       #Default is "list"
-SEARCH_COMMAND = ""     #Default is "search"
-STATUS_COMMAND = ""     #Default is "status"
-STATS_COMMAND = ""      #Default is "stats"
-HELP_COMMAND = ""       #Default is "help"
-CLONE_COMMAND = ""      #Default is "clone"
-COUNT_COMMAND = ""      #Default is "count"
-WATCH_COMMAND = ""      #Default is "watch"
-ZIPWATCH_COMMAND = ""   #Default is "zipwatch"
-QBMIRROR_COMMAND = ""   #Default is "qbmirror"
-QBZIP_COMMAND = ""      #Default is "qbzipmirror"
-QBUNZIP_COMMAND = ""    #Default is "qbunzipmirror"
+START_COMMAND = "start@asuleech1bot"      #Default is "start"
+MIRROR_COMMAND = "mirror@asuleech1bot"     #Default is "mirror"
+ZIP_COMMAND = "zipmirror@asuleech1bot"        #Default is "zipmirror"
+UNZIP_COMMAND = "unzipmirror@asuleech1bot"      #Default is "unzipmirror"
+CANCEL_COMMAND = "cancel@asuleech1bot"     #Default is "cancel"
+LIST_COMMAND = "list@asuleech1bot"       #Default is "list"
+SEARCH_COMMAND = "search@asuleech1bot"     #Default is "search"
+STATUS_COMMAND = "status@asuleech1bot"     #Default is "status"
+STATS_COMMAND = "stats@asuleech1bot"      #Default is "stats"
+HELP_COMMAND = "help@asuleech1bot"       #Default is "help"
+CLONE_COMMAND = "clone@asuleech1bot"      #Default is "clone"
+COUNT_COMMAND = "count@asuleech1bot"      #Default is "count"
+WATCH_COMMAND = "watch@asuleech1bot"      #Default is "watch"
+ZIPWATCH_COMMAND = "zipwatch@asuleech1bot"   #Default is "zipwatch"
+QBMIRROR_COMMAND = "qbmirror@asuleech1bot"   #Default is "qbmirror"
+QBZIP_COMMAND = "qbzipmirror@asuleech1bot"      #Default is "qbzipmirror"
+QBUNZIP_COMMAND = "qbunzipmirror@asuleech1bot"    #Default is "qbunzipmirror"
 BTSELECT_COMMAND = ""   #Deafault is "btsel"
 
 #Leech Related Commands
-LEECH_COMMAND = ""          #Default is "leech"
-LEECHSET_COMMAND = ""       #Default is "leechset"
-SETTHUMB_COMMAND = ""       #Default is "setthumb"
-UNZIPLEECH_COMMAND = ""     #Default is "unzipleech"
-ZIPLEECH_COMMAND = ""       #Default is "zipleech"
-QBLEECH_COMMAND = ""        #Default is "qbleech"
-QBUNZIPLEECH_COMMAND = ""   #Default is "qbunzipleech"
-QBZIPLEECH_COMMAND = ""     #Default is "qbzipleech"
-LEECHWATCH_COMMAND = ""     #Default is "leechwatch"
-LEECHZIPWATCH_COMMAND = ""  #Default is "leechzipwatch"
-PRENAME_COMMAND = ""        #Default is "prename"
-CAPTION_COMMAND = ""        #Default is "caption"
-DUMPID_COMMAND = ""         #Default is "dumpid"
+LEECH_COMMAND = "leech@asuleech1bot"          #Default is "leech"
+LEECHSET_COMMAND = "leechset@asuleech1bot"       #Default is "leechset"
+SETTHUMB_COMMAND = "setthumb@asuleech1bot"       #Default is "setthumb"
+UNZIPLEECH_COMMAND = "unzipleech@asuleech1bot"     #Default is "unzipleech"
+ZIPLEECH_COMMAND = "zipleech@asuleech1bot"       #Default is "zipleech"
+QBLEECH_COMMAND = "qbleech@asuleech1bot"        #Default is "qbleech"
+QBUNZIPLEECH_COMMAND = "qbunzipleech@asuleech1bot"   #Default is "qbunzipleech"
+QBZIPLEECH_COMMAND = "qbzipleech@asuleech1bot"     #Default is "qbzipleech"
+LEECHWATCH_COMMAND = "leechwatch@asuleech1bot"     #Default is "leechwatch"
+LEECHZIPWATCH_COMMAND = "leechzipwatch@asuleech1bot"  #Default is "leechzipwatch"
+PRENAME_COMMAND = "prename@asuleech1bot"        #Default is "prename"
+CAPTION_COMMAND = "caption@asuleech1bot"        #Default is "caption"
+DUMPID_COMMAND = "dumpid@asuleech1bot"         #Default is "dumpid"
 
 #SUDO Commands
-AUTH_COMMAND = ""           #Default is "authorize"
-UNAUTH_COMMAND = ""         #Default is "unauthorize"
-ADDSUDO_COMMAND = ""        #Default is "addsudo"
-RMSUDO_COMMAND = ""         #Default is "rmsudo"
-RESTART_COMMAND = ""        #Default is "restart"
-SPEED_COMMAND = ""          #Default is "speedtest"
-USERS_COMMAND = ""          #Default is "users"
-PAID_COMMAND = ""           #Default is "paid"
-ADDPAID_COMMAND = ""        #Default is "addpaid"
-RMPAID_COMMAND = ""         #Default is "rmpaid"
-CANCEL_ALL_COMMAND = ""     #Default is  "cancelall
-LOG_COMMAND = ""            #Default is "log"
-DELETE_COMMAND = ""         #Default is "del"
-USAGE_COMMAND = ""          #Default is "usage"
+AUTH_COMMAND = "authorize@asuleech1bot"           #Default is "authorize"
+UNAUTH_COMMAND = "unauthorize@asuleech1bot"         #Default is "unauthorize"
+ADDSUDO_COMMAND = "addsudo@asuleech1bot"        #Default is "addsudo"
+RMSUDO_COMMAND = "rmsudo@asuleech1bot"         #Default is "rmsudo"
+RESTART_COMMAND = "restart@asuleech1bot"        #Default is "restart"
+SPEED_COMMAND = "speedtest@asuleech1bot"          #Default is "speedtest"
+USERS_COMMAND = "users@asuleech1bot"          #Default is "users"
+PAID_COMMAND = "paid@asuleech1bot"           #Default is "paid"
+ADDPAID_COMMAND = "addpaid@asuleech1bot"        #Default is "addpaid"
+RMPAID_COMMAND = "rmpaid@asuleech1bot"         #Default is "rmpaid"
+CANCEL_ALL_COMMAND = "cancelall@asuleech1bot"     #Default is "cancelall
+LOG_COMMAND = "log@asuleech1bot"            #Default is "log"
+DELETE_COMMAND = "del@asuleech1bot"         #Default is "del"
+USAGE_COMMAND = "usage@asuleech1bot"          #Default is "usage"
 
 #EXTRA COMMANDS
-SCRAPE_COMMAND = ""         #Default is "scrape"
-PING_COMMAND = ""           #Default is "ping"
-SPEEDTEST_COMMAND = ""      #Default is "speedtest"
-MEDIAINFO_COMMAND = ""      #Default is "mediainfo"
-HASH_COMMAND = ""           #Default is "hash"
-WAYBACK_COMMAND = ""        #Default is "wayback"
+SCRAPE_COMMAND = "scrape@asuleech1bot"         #Default is "scrape"
+PING_COMMAND = "ping@asuleech1bot"           #Default is "ping"
+SPEEDTEST_COMMAND = "speedtest@asuleech1bot"      #Default is "speedtest"
+MEDIAINFO_COMMAND = "mediainfo@asuleech1bot"      #Default is "mediainfo"
+HASH_COMMAND = "hash@asuleech1bot"           #Default is "hash"
+WAYBACK_COMMAND = "wayback@asuleech1bot"        #Default is "wayback"
