--- a/config.env
+++ b/config.env
@@ -10,6 +10,10 @@ IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 1923471
 TELEGRAM_HASH = "fcdc178451cd234e63faefd38895c991"
 
+MEGA_API_KEY = "1R4kwKBY"
+MEGA_EMAIL_ID = "jasuranbot1@gmail.com"
+MEGA_PASSWORD = "Tigerjegaa@123"
+
 # OPTIONAL CONFIG
 DATABASE_URL = "mongodb+srv://video:video@cluster0.gp0rn.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001537168432 -1001775437494 -1001788120367"  # Split by space
