--- a/config.env
+++ b/config.env
@@ -10,9 +10,9 @@ IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 1923471
 TELEGRAM_HASH = "fcdc178451cd234e63faefd38895c991"
 
-MEGA_API_KEY = "1R4kwKBY"
-MEGA_EMAIL_ID = "jasuranbot1@gmail.com"
-MEGA_PASSWORD = "Tigerjegaa@123"
+#MEGA_API_KEY = "1R4kwKBY"
+#MEGA_EMAIL_ID = "jasuranbot1@gmail.com"
+#MEGA_PASSWORD = "Tigerjegaa@123"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "mongodb+srv://video:video@cluster0.gp0rn.mongodb.net/?retryWrites=true&w=majority"
