--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ TELEGRAM_HASH = "fcdc178451cd234e63faefd38895c991"
 # OPTIONAL CONFIG
 DATABASE_URL = "mongodb+srv://video:video@cluster0.gp0rn.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001537168432 -1001775437494 -1001788120367"  # Split by space
-SUDO_USERS = "928866253 880087645 1540312271 1441767180 1311694064"  # Split by space
+SUDO_USERS = "928866253 880087645 1540312271 1441767180 1311694064 1546983881"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://gindex.jasurun.workers.dev/0:"
@@ -89,7 +89,7 @@ TOKEN_PICKLE_URL = "https://gindex.jasurun.workers.dev/0:/token_sa.pickle" #reco
 
 # Limits  
 TOTAL_TASKS_LIMIT = "10"
-USER_TASKS_LIMIT = "5"
+USER_TASKS_LIMIT = "10"
 STORAGE_THRESHOLD = ""
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
