--- a/config.env
+++ b/config.env
@@ -76,7 +76,7 @@ CHANNEL_USERNAME = "JAsuranserials"
 FSUB_CHANNEL_ID = -1001695270196
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://mirrorjais2a.onrender.com"
+BASE_URL_OF_BOT = "https://leechkaros.onrender.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
